<resources>
    <string name="app_name">Lux Events</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Lux Events</string>
    <string name="nav_header_subtitle">info@luxevents.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="my_event">My Events</string>
    <string name="create_event">Create Events</string>
    <string name="inbox">Inbox</string>
    <string name="promotion">Promote Events</string>
    <string name="help">Help &amp; Support</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>
    <string name="title_activity_login">Lux Event</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="more">more</string>



    <string-array name="event_category_array">
        <item>Party</item>
        <item>Birthday</item>
        <item>Concert</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
</resources>
