<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        
        <item
            android:id="@+id/my_event"
            android:icon="@drawable/event24"
            android:title="@string/my_event" />
        <item
            android:id="@+id/create_event"
            android:icon="@drawable/plus24"
            android:title="@string/create_event" />
        <item
            android:id="@+id/other_events"
            android:icon="@drawable/otherevents"
            android:title="@string/other_event" />
    </group>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/promotion"
                android:icon="@drawable/promotion24"
                android:title="@string/promotion" />
            <item
                android:id="@+id/help"
                android:icon="@drawable/help24"
                android:title="@string/help" />
            <item
                android:id="@+id/setting"
                android:icon="@drawable/settings24"
                android:title="@string/setting" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/logout24"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
