<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/my_event">



    <fragment
        android:id="@+id/my_event"
        android:name="com.imsaddam.luxevents.ui.createEvent.EventsListFragment"
        android:label="@string/my_event"
        tools:layout="@layout/fragment_myevents" />

    <fragment
        android:id="@+id/create_event"
        android:name="com.imsaddam.luxevents.ui.createEvent.CreateEventFragment"
        android:label="@string/create_event"
        tools:layout="@layout/fragment_create_event" />

    <fragment
        android:id="@+id/other_events"
        android:name="com.imsaddam.luxevents.ui.createEvent.OtherEventsListFragment"
        android:label="@string/other_event"
        tools:layout="@layout/fragment_myevents" />

    <fragment
        android:id="@+id/promotion"
        android:name="com.imsaddam.luxevents.ui.share.ShareFragment"
        android:label="@string/promotion"
        tools:layout="@layout/fragment_promotion" />

    <fragment
        android:id="@+id/help"
        android:name="com.imsaddam.luxevents.ui.send.SendFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/setting"
        android:name="com.imsaddam.luxevents.ui.send.SendFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />


</navigation>